@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Restart=on-failure
 StandardOutput=tty
-EnvironmentFile=-BUILD_ARKIME_INSTALL_DIR/etc/molochwise.env
+EnvironmentFile=-BUILD_ARKIME_INSTALL_DIR/etc/wise.env
 ExecStart=/bin/sh -c 'BUILD_ARKIME_INSTALL_DIR/bin/node wiseService.js -c BUILD_ARKIME_INSTALL_DIR/etc/wise.ini ${OPTIONS} >> BUILD_ARKIME_INSTALL_DIR/logs/wise.log 2>&1'
 WorkingDirectory=BUILD_ARKIME_INSTALL_DIR/wiseService
 
