@@ -1,10 +1,10 @@
 # Latest settings documentation: https://arkime.com/settings
 #
-# Arkime uses a tiered system for configuration variables.  This allows Arkime
+# Arkime capture/viewer uses a tiered system for configuration variables.  This allows Arkime
 # to share one config file for many machines.  The ordering of sections in this
 # file doesn't matter.
 #
-# Order of config variables:
+# Order of config variables use:
 # 1st) [optional] The section titled with the node name is used first.
 # 2nd) [optional] If a node has a nodeClass variable, the section titled with
 #      the nodeClass name is used next.  Sessions will be tagged with
@@ -15,12 +15,22 @@
 # Comma seperated list of elasticsearch host:port combinations.  If not using a
 # Elasticsearch load balancer, a different elasticsearch node in the cluster can be specified
 # for each Arkime node to help spread load on high volume clusters.  For user/password
-# use http://user:pass@host:port
+# use http://user:pass@host:port OR elasticsearchBasicAuth
 elasticsearch=ARKIME_ELASTICSEARCH
+# elasticsearchBasicAuth=
+
+# Where the user database is, the above is used if not set
+# For user/password use http://user:pass@host:port OR usersElasticsearchBasicAuth
+# usersElasticsearch=ARKIME_ELASTICSEARCH
+# usersElasticsearchBasicAuth=
 
 # How often to create a new elasticsearch index. hourly,hourly6,daily,weekly,monthly
 # Changing the value will cause previous sessions to be unreachable
 rotateIndex=daily
+
+# Uncomment if this node should process the cron queries and packet search jobs, only ONE node should 
+# process cron queries and packet search jobs
+# cronQueries=true
 
 # Cert file to use, comment out to use http instead
 # certFile=ARKIME_INSTALL_DIR/etc/arkime.cert
@@ -38,7 +48,7 @@ rotateIndex=daily
 # for secure S2S communication. Comment out for no user authentication.
 # Changing the value will make all previously stored passwords no longer work.
 # Make this RANDOM, you never need to type in
-passwordSecret = ARKIME_PASSWORD
+passwordSecret=ARKIME_PASSWORD
 
 # Use a different password for S2S communication then passwordSecret.
 # Must be in default section.  Make this RANDOM, you never need to type in
@@ -46,7 +56,7 @@ passwordSecret = ARKIME_PASSWORD
 
 # HTTP Digest Realm - Must be in default section.  Changing the value
 # will make all previously stored passwords no longer work
-httpRealm = Moloch
+httpRealm=Moloch
 
 # Semicolon ';' seperated list of interfaces to listen on for traffic
 interface=ARKIME_INTERFACE
@@ -55,69 +65,68 @@ interface=ARKIME_INTERFACE
 #wiseHost=127.0.0.1
 
 # Log viewer access requests to a different log file
-#accessLogFile = ARKIME_INSTALL_DIR/logs/access.log
+#accessLogFile=ARKIME_INSTALL_DIR/logs/access.log
 
 # Control the log format for access requests. This uses URI % encoding.
-#accessLogFormat = :date :username %1b[1m:method%1b[0m %1b[33m:url%1b[0m :status :res[content-length] bytes :response-time ms
+#accessLogFormat=:date :username %1b[1m:method%1b[0m %1b[33m:url%1b[0m :status :res[content-length] bytes :response-time ms
 
 # The directory to save raw pcap files to
-pcapDir = ARKIME_INSTALL_DIR/raw
+pcapDir=ARKIME_INSTALL_DIR/raw
 
 # The max raw pcap file size in gigabytes, with a max value of 36G.
 # The disk should have room for at least 10*maxFileSizeG
-maxFileSizeG = 12
+maxFileSizeG=12
 
 # The max time in minutes between rotating pcap files.  Default is 0, which means
 # only rotate based on current file size and the maxFileSizeG variable
-#maxFileTimeM = 60
+#maxFileTimeM=60
 
 # TCP timeout value.  Arkime writes a session record after this many seconds
 # of inactivity.
-tcpTimeout = 600
+tcpTimeout=600
 
 # Arkime writes a session record after this many seconds, no matter if
 # active or inactive
-tcpSaveTimeout = 720
+tcpSaveTimeout=720
 
 # UDP timeout value.  Arkime assumes the UDP session is ended after this
 # many seconds of inactivity.
-udpTimeout = 30
+udpTimeout=30
 
 # ICMP timeout value.  Arkime assumes the ICMP session is ended after this
 # many seconds of inactivity.
-icmpTimeout = 10
+icmpTimeout=10
 
-# An aproximiate maximum number of active sessions Arkime/libnids will try
-# and monitor
-maxStreams = 1000000
+# An aproximiate maximum number of active sessions Arkime will try and monitor
+maxStreams=1000000
 
 # Arkime writes a session record after this many packets
-maxPackets = 10000
+maxPackets=10000
 
 # Delete pcap files when free space is lower then this in gigabytes OR it can be
 # expressed as a percentage (ex: 5%).  This does NOT delete the session records in
 # the database. It is recommended this value is between 5% and 10% of the disk.
 # Database deletes are done by the db.pl expire script
-freeSpaceG = 5%
+freeSpaceG=5%
 
 # The port to listen on, by default 8005
-#viewPort = 8005
+#viewPort=8005
 
 # The host/ip to listen on, by default 0.0.0.0 which is ALL
-#viewHost = localhost
+#viewHost=localhost
 
 # A MaxMind account is now required, Arkime checks several install locations, or
 # will work without Geo files installed. See https://arkime.com/faq#maxmind
-#geoLite2Country = /var/lib/GeoIP/GeoLite2-Country.mmdb;/usr/share/GeoIP/GeoLite2-Country.mmdb;ARKIME_INSTALL_DIR/etc/GeoLite2-Country.mmdb
-#geoLite2ASN = /var/lib/GeoIP/GeoLite2-ASN.mmdb;/usr/share/GeoIP/GeoLite2-ASN.mmdb;ARKIME_INSTALL_DIR/etc/GeoLite2-ASN.mmdb
+#geoLite2Country=/var/lib/GeoIP/GeoLite2-Country.mmdb;/usr/share/GeoIP/GeoLite2-Country.mmdb;ARKIME_INSTALL_DIR/etc/GeoLite2-Country.mmdb
+#geoLite2ASN=/var/lib/GeoIP/GeoLite2-ASN.mmdb;/usr/share/GeoIP/GeoLite2-ASN.mmdb;ARKIME_INSTALL_DIR/etc/GeoLite2-ASN.mmdb
 
 # Path of the rir assignments file
 #  https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.csv
-rirFile = ARKIME_INSTALL_DIR/etc/ipv4-address-space.csv
+rirFile=ARKIME_INSTALL_DIR/etc/ipv4-address-space.csv
 
 # Path of the OUI file from whareshark
 #  https://raw.githubusercontent.com/wireshark/wireshark/master/manuf
-ouiFile = ARKIME_INSTALL_DIR/etc/oui.txt
+ouiFile=ARKIME_INSTALL_DIR/etc/oui.txt
 
 # Arkime rules to allow you specify actions to perform when criteria are met with certain fields or state. 
 # See https://arkime.com/rulesformat
@@ -181,7 +190,7 @@ supportSha256=false
 maxReqBody=64
 
 # Only store request bodies that Utf-8?
-config.reqBodyOnlyUtf8 = true
+config.reqBodyOnlyUtf8=true
 
 # Semicolon ';' seperated list of SMTP Headers that have ips, need to have the terminating colon ':'
 smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
@@ -244,39 +253,38 @@ pcapWriteMethod=simple
 
 # ADVANCED - Buffer size when writing pcap files.  Should be a multiple of the raid 5 or xfs
 # stripe size.  Defaults to 256k
-pcapWriteSize = 262143
+pcapWriteSize=262143
 
 # ADVANCED - Number of bytes to bulk index at a time
-dbBulkSize = 300000
+dbBulkSize=300000
 
 # ADVANCED - Max number of connections to elastic search
-maxESConns = 30
+maxESConns=30
 
 # ADVANCED - Max number of es requests outstanding in q
-maxESRequests = 500
+maxESRequests=500
 
-# ADVANCED - Number of packets to ask libnids/libpcap to read per poll/spin
+# ADVANCED - Number of packets to ask libpcap to read per poll/spin
 # Increasing may hurt stats and ES performance
 # Decreasing may cause more dropped packets
-packetsPerPoll = 50000
+packetsPerPoll=50000
 
-# ADVANCED - Arkime will try to compensate for SYN packet drops by swapping
-# the source and destination addresses when a SYN-acK packet was captured first.
-# Probably useful to set it false, when running Arkime in wild due to SYN floods.
-antiSynDrop = true
+# ADVANCED - The base path for Arkime web access.  Must end with a / or bad things will happen
+# Only set when using a reverse proxy
+# webBasePath=/arkime/
 
 # DEBUG - Write to stdout info every X packets.
 # Set to -1 to never log status
-logEveryXPackets = 100000
+logEveryXPackets=100000
 
 # DEBUG - Write to stdout unknown protocols
-logUnknownProtocols = false
+logUnknownProtocols=false
 
 # DEBUG - Write to stdout elastic search requests
-logESRequests = true
+logESRequests=true
 
 # DEBUG - Write to stdout file creation information
-logFileCreation = true
+logFileCreation=true
 
 
 ### High Performance settings
@@ -285,35 +293,13 @@ logFileCreation = true
 # pcapReadMethod=tpacketv3
 # tpacketv3NumThreads=2
 # pcapWriteMethod=simple
-# pcapWriteSize = 2560000
+# pcapWriteSize=2560000
 # packetThreads=5
-# maxPacketsInQueue = 200000
+# maxPacketsInQueue=200000
 
 ### Low Bandwidth settings
 # packetThreads=1
-# pcapWriteSize = 65536
-
-##############################################################################
-# Nodes
-# Usually just use the hostname before the first dot as the node name
-# Can override most default values
-
-[node1]
-# Might use a different elasticsearch node
-elasticsearch=elasticsearchhost1
-
-# Uncomment if this node should process the cron queries and packet search jobs, only ONE node should process cron queries and packet search jobs
-# cronQueries = true
-#
-# The base path for Arkime web access.  Must end with a / or bad things will happen
-# Only set when using a reverse proxy
-# webBasePath = /arkime/
-
-[node2]
-# Might use a different elasticsearch node
-elasticsearch=elasticsearchhost2
-# Uses a different interface
-interface = eth4
+# pcapWriteSize=65536
 
 ##############################################################################
 # override-ips is a special section that overrides the MaxMind databases for
@@ -361,10 +347,9 @@ authorization=type:string
 # from one cluster to another either manually or with the cron feature fill out
 # this section
 
-#[moloch-clusters]
+#[remote-clusters]
 #forensics=url:https://viewer1.host.domain:8005;serverSecret:password4arkime;name:Forensics Cluster
 #shortname2=url:http://viewer2.host.domain:8123;serverSecret:password4arkime;name:Testing Cluster
-
 
 
 # WARNING: This is an ini file with sections, most likely you don't want to put a setting here.
