@@ -395,6 +395,28 @@ jobs:
             - AWS_ACCESS_KEY_ID
             - AWS_SECRET_ACCESS_KEY
 
+    release-el-9:
+        requires: [release-build]
+        image: andywick/arkime-build-9:4.0.0-5
+        steps:
+            - (cd / ; curl https://s3.amazonaws.com/files.molo.ch/snfmin.tar.gz | tar -zxvf -)
+            - ln -s /thirdparty .
+            - build: ./easybutton-build.sh --daq --pfring --rminstall
+            - export PATH=/opt/arkime/bin:/data/moloch/bin:$PATH:$PWD/node_modules/.bin
+            - npm -g config set user root; npm -g config set cache-min 9999999
+            - installing: make install
+            - cp -r capture/plugins/lua/samples /opt/arkime/lua
+            - npm install license-checker; release/notice.txt.pl /opt/arkime NOTICE release/CAPTURENOTICE > /opt/arkime/NOTICE.txt
+            - build-package: |
+                export ARKIME_VERSION=`sed 's/.*"\(.*\)\".*$/\1/' /opt/arkime/common/version.js | head -n 1 | tr "-" "_"`
+                fpm -s dir -t rpm -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration $RELEASE_ITERATION --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" -d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https -d libzstd /opt/arkime
+                aws s3 cp arkime-${ARKIME_VERSION}-${RELEASE_ITERATION}.x86_64.rpm s3://files.molo.ch/builds/el-9/ --acl public-read
+            - ls -l *.rpm
+
+        secrets:
+            - AWS_ACCESS_KEY_ID
+            - AWS_SECRET_ACCESS_KEY
+
     release-ubuntu-18:
         requires: [release-build]
         image: andywick/arkime-build-18:4.0.0-4
